# imitation

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  colourmap.c  config.h.in  configure  configure.ac  experiment.c  experiment.h  game.c  game.h  graph.c  graph.h  main.c  menu_bar.c  menubar.c  menubar.h  random.c  random.h  result.c  result.h  ui.c  ui.h  ui_action.c  uiactions.c  uiactions.h
docs/: Doxyfile.in  Makefile.am  Makefile.in
src/: Makefile  colourmap.h  experiment.c  experiment.h  game.c  game.h  graph.c  graph.h  main.c  menu_bar.c  menu_bar.h  random.c  random.h  result.c  ui.c  ui.h  ui_action.c  ui_action.h
tests/game/: Makefile  game_p_i_test.c  game_p_ij_test.c  game_payoff_test.c
tests/graph/: Makefile  bipartite_graph_test.c  complete_graph_test.c  cycle_graph_test.c  grid_graph_test.c  uniform_tree_test.c
tests/random/: Makefile  random_boolean_test.c  random_integer_test.c
